# serde_type_name

./: Cargo.toml  README.md
src/: lib.rs
